[tool.poetry]
name = "sample_agent"
version = "0.1.0"
description = "Starter"
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain-openai = "^0.3.33"
langchain-anthropic = "^0.3.20"
langchain = "^0.3.1"
openai = "^1.51.0"
langchain-community = "^0.3.29"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
langchain-core = "^0.3.25"
langgraph = "^0.6.7"
langgraph-api = "^0.4.20"
langgraph-cli = { extras = ["inmem"], version = "^0.4.2" }

[tool.poetry.scripts]
demo = "sample_agent.demo:main"
